Make topMenu fixed, modify scrollbar appearance.
- Increase z-index for topMenu using ng-deep.
- Make it fixed width by taking into account scrollbar width.
- Modify scrollbar size and appearance (7px).
- Give fixed marginTop of 90px for all content below topMenu.

--- a/src/app/modules/dashboard/components/dashboard/dashboard.component.css
+++ b/src/app/modules/dashboard/components/dashboard/dashboard.component.css
@@ -2,3 +2,8 @@
   display: grid;
   grid-template-columns: 2fr 5fr;
 }
+
+::ng-deep .priority-menu-bar {
+  z-index: 100000000;
+  width: calc(100vw - 7px);
+}
