--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,12 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #333;
+  border-radius: 2px;
+}
